# Toy-20.0

./: CMakeLists.txt  run.sh
Ch2/include/toy/: Ops.td
